--- a/app/src/pages/loginRegister/login.css
+++ b/app/src/pages/loginRegister/login.css
@@ -1,7 +1,7 @@
 .login {
     width: 100vw;
     height: 100vh;
-    background-color: #5092f7;
+    background-color: #f0f2f5;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,7 +11,7 @@
     width: 70%;
     height: 70%;
     display: flex;
-     border:#1775ee 5px;  
+    /* border:#1775ee 5px; */
   }
  
 
@@ -25,20 +25,23 @@
   
   .loginLogo {
     font-size: 80px;
-    font-weight: 800;
+    font-weight: 8000;
     color: #1775ee;
     margin-bottom: 10px;
-      width: 80%;
+      width: 100%;
       align-self: center;
       height: 50px;
       border-radius: 10px;
       text-align: center;
       position: relative;
+      box-sizing: border-box;
     }
   
   
   .loginDesc {
     font-size: 24px;
+    text-align: center;
+      position: relative;
   }
   
   .loginBox{
@@ -68,7 +71,7 @@
       border-radius: 10px;
       border: none;
       background-color: #1775ee;
-      color: rgb(5, 4, 4);
+      color: white;
       font-size: 20px;
       font-weight: 500;
       cursor: pointer;
@@ -79,6 +82,11 @@
       color: #1775ee;
   }
   
+
+  body{
+    background-color: lightskyblue;
+  }
+  
   .loginRegisterButton{
       width: 60%;
       align-self: center;
@@ -86,10 +94,63 @@
       border-radius: 10px;
       border: none;
       background-color: #42b72a;
-      color: rgb(126, 7, 7);
+      color: white;
       font-size: 20px;
       font-weight: 500;
       cursor: pointer;
   }
-
+body 
+  * {
+    box-sizing: border-box;
  
+  }
+  
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    color: antiquewhite;
+  }
+  
+  /* Float four columns side by side */
+  .column {
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+  }
+  
+  /* Remove extra left and right margins, due to padding in columns */
+  .row {margin: 0 -5px;}
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Style the counter cards */
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+    padding: 16px;
+    text-align: center;
+    background-color: #1775ee;
+  }  
+  
+  /* Responsive columns - one column layout (vertical) on small screens */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+
+  h4{
+    font-size: large;
+    color: #000;
+  }
+
+  h5{
+    font-size: large;
+    color: #000;
+  }
