--- a/app/src/pages/register/register.css
+++ b/app/src/pages/register/register.css
@@ -54,29 +54,11 @@
       outline: none;
   }
   
-  .loginButton{
+  .signUpButton{
       height: 50px;
       border-radius: 10px;
       border: none;
       background-color: #1775ee;
-      color: white;
-      font-size: 20px;
-      font-weight: 500;
-      cursor: pointer;
-  }
-  
-  .loginForgot{
-      text-align: center;
-      color: #1775ee;
-  }
-  
-  .loginRegisterButton{
-      width: 60%;
-      align-self: center;
-      height: 50px;
-      border-radius: 10px;
-      border: none;
-      background-color: #42b72a;
       color: white;
       font-size: 20px;
       font-weight: 500;
