--- a/app/src/pages/homepage.css
+++ b/app/src/pages/homepage.css
@@ -2,3 +2,176 @@
     background-color: #e7e7e7;
     height: 100vh;
 }
+
+#welcomeText{
+    position: relative;
+    height: 60px;
+    width: 100%;
+    font-size: 50px;
+    font-weight: bold;
+    color: darkblue;
+    text-align: center;
+}
+.card {
+    width: 100%;
+    height: 100px;
+    background: #e7e7e7;
+    position: relative;
+    top: -40px;
+    box-shadow: 15px 15px 50px #adb5bd75;
+    text-align: center;
+    transition: all 0.3s ease-in;
+  }
+  
+  .card p {
+    transition: all 0.3s ease-in;
+    margin-top: 40px;
+    font-size: 50px;
+    font-weight: bold;
+    color: darkblue;
+  }
+  
+  .card:hover {
+    box-shadow: none;
+  }
+  
+  #buttonOne {
+    position: relative;
+    top: 25px;
+    left: 25%;
+  }
+  #buttonTwo {
+    position: relative;
+    top: 25px;
+    left: 30%;
+  }
+  
+  #buttonThree {
+    position: relative;
+    top: 25px;
+    left: 35%;
+  }
+  
+  #buttonFour {
+    position: relative;
+    top: 25px;
+    left: 40%;
+  }
+  
+  
+
+  button {
+    position: relative;
+    padding: 10px 20px;
+    border-radius: 7px;
+    border: 1px solid rgb(61, 106, 255);
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
+    background: transparent;
+    color: blue;
+    overflow: hidden;
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+  }
+  
+  button:hover {
+    background: rgb(61, 106, 255);
+    box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+    -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+    color: white;
+    cursor: pointer;
+  }
+  
+  button:hover::before {
+    -webkit-animation: sh02 0.5s 0s linear;
+    -moz-animation: sh02 0.5s 0s linear;
+    animation: sh02 0.5s 0s linear;
+  }
+  
+  button::before {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 86%;
+    position: absolute;
+    top: 7%;
+    left: 0%;
+    opacity: 0;
+    background: #fff;
+    box-shadow: 0 0 50px 30px #fff;
+    -webkit-transform: skewX(-20deg);
+    -moz-transform: skewX(-20deg);
+    -ms-transform: skewX(-20deg);
+    -o-transform: skewX(-20deg);
+    transform: skewX(-20deg);
+  }
+  
+  @keyframes sh02 {
+    from {
+      opacity: 0;
+      left: 0%;
+    }
+  
+    50% {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+      left: 100%;
+    }
+  }
+  
+  button:active {
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: box-shadow 0.2s ease-in;
+    -moz-transition: box-shadow 0.2s ease-in;
+    transition: box-shadow 0.2s ease-in;
+  }
+
+  a{
+    text-decoration: none;
+}
+
+#boxOne
+{
+    width: 25%;
+    height: 300px;
+    background: #e7e7e7;
+    position: relative;
+    top: 50px;
+    left: 10%;
+    box-shadow: 15px 15px 50px #adb5bd75;
+    text-align: center;
+    transition: all 0.3s ease-in;
+}
+
+#boxTwo{
+    width: 25%;
+    height: 300px;
+    background: #e7e7e7;
+    position: relative;
+    top: -250px;
+    left: 35.5%;
+    box-shadow: 15px 15px 50px #adb5bd75;
+    text-align: center;
+    transition: all 0.3s ease-in;
+}
+#boxThree{
+    width: 25%;
+    height: 300px;
+    background: #e7e7e7;
+    position: relative;
+    top: -550px;
+    left: 61%;
+    box-shadow: 15px 15px 50px #adb5bd75;
+    text-align: center;
+    transition: all 0.3s ease-in;
+}
+
