--- a/app/src/pages/homepage.css
+++ b/app/src/pages/homepage.css
@@ -173,6 +173,7 @@
     box-shadow: 15px 15px 50px #adb5bd75;
     text-align: center;
     transition: all 0.3s ease-in;
+    overflow: scroll;
 }
 
 #boxFour{
@@ -211,4 +212,46 @@
     transition: all 0.3s ease-in;
 }
 
+#friend-list { 
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background: #EEE;
+  list-style-type: none;
+}
 
+.friend {
+  width: 100%;
+  height: 60px;
+  background: #EEE;
+  border-bottom: 1px solid #DDD;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.friend img {
+  width: 45px;
+  height: 45px;
+  border-radius: 30px;
+  border: 2px solid #AAA;
+  object-fit: cover;
+  margin-left: 5px;
+  margin-right: 10px;
+}
+
+.friend .name {
+  font-size: 18px;
+}
+
+.friend.selected {
+  background: #43A047;
+  color: white;
+}
+
+
+.friend:not(.selected):hover {
+  background: #DDD;
+}
