--- a/app/src/pages/register/register.css
+++ b/app/src/pages/register/register.css
@@ -1,420 +1,268 @@
-#loginWrapper {
-  width: 65%;
-  height: 70%;
-  display: flex;
-  /* border:#1775ee 5px; */
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
+/* BASIC */
+
+html {
+  background-color: #e7e7e7;
 }
 
-
-.left
-{
-  flex: 1;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.middle {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+body {
+  font-family: "Poppins", sans-serif;
+  height: 100vh;
 }
 
-/*.loginLogo {
-  font-size: 80px;
-  font-weight: 3000;
-  color: white;
-  margin-bottom: 10px;
-    width: 100%;
-    align-self: center;
-    height: 50px;
-    border-radius: 10px;
-    text-align: center;
-    position: relative;
-    box-sizing: border-box;
-  }
-*/
+a {
+  color: #92badd;
+  display:inline-block;
+  text-decoration: none;
+  font-weight: 400;
+}
 
-
-.loginLogo {
-  font-size: 90px;
-  font-weight: 800;
-  color: #1775ee;
-  margin-bottom: 120px;
-  width: 100%;
-  align-self: center;
-  height: 90px;
-  border-radius: 10px;
+h2 {
   text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  display:inline-block;
+  margin: 40px 8px 10px 8px; 
+  color: #cccccc;
+}
+
+
+
+/* STRUCTURE */
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column; 
+  justify-content: center;
+  width: 100%;
+  min-height: 100%;
+  padding: 20px;
+}
+
+#formContent {
+  -webkit-border-radius: 10px 10px 10px 10px;
+  border-radius: 10px 10px 10px 10px;
+  background: #fff;
+  padding: 30px;
+  width: 90%;
+  max-width: 450px;
   position: relative;
-  box-sizing: border-box;
+  padding: 0px;
+  -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  text-align: center;
+}
+
+#formFooter {
+  background-color: #f6f6f6;
+  border-top: 1px solid #dce8f1;
+  padding: 25px;
+  text-align: center;
+  -webkit-border-radius: 0 0 10px 10px;
+  border-radius: 0 0 10px 10px;
 }
 
 
 
-#box{
-    height: 470px;
-    padding: 150px;
-    top: -20px;
-    width: 600px;
-    left: 180px;
-    padding-left: 20px;
-    position: relative;
-    border-radius: 49px;
-    background: lightblue;
-    box-shadow:  -6px -6px 15px lightgray,
-                 6px 6px 15px #45466e;
-}
+/* TABS */
 
-.loginInput{
-    height: 50px;
-    border-radius: 10px;
-    border: 1px solid black;
-    font-size: 18px;
-    padding-left: 20px;
-}
-
-.loginInput:focus{
-    outline: none;
-}
-
-
-.loginForgot{
-  position: absolute;
-    top:250px;
-    left:300px;
-    text-align: center;
-    color: black;
-    font-size: 20px;
-}
-
-.loginForgot:hover{
-  color: #17C3B2;
-  text-decoration: underline;
+h2.inactive {
+  color: #cccccc;
   cursor: pointer;
 }
 
-
-body{
-  background:  lightblue;
-  margin: 0px;
+h2.active {
+  color: #0d0d0d;
+  border-bottom: 2px solid #5fbae9;
 }
 
 
-/* Float four columns side by side */
-.column {
-  float: left;
-  width: 25%;
-  padding: 0 10px;
+
+/* FORM TYPOGRAPHY*/
+
+input[type=button], input[type=submit], input[type=reset]  {
+  background-color: #56baed;
+  border: none;
+  color: white;
+  padding: 15px 80px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 13px;
+  -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+  box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+  margin: 5px 20px 40px 20px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
-/* Remove extra left and right margins, due to padding in columns */
-.row {margin: 0 -5px;}
+input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+  background-color: #39ace7;
+}
 
-/* Clear floats after the columns */
-.row:after {
+input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+  -moz-transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+  -o-transform: scale(0.95);
+  -ms-transform: scale(0.95);
+  transform: scale(0.95);
+}
+
+input[type=text] {
+  background-color: #f6f6f6;
+  border: none;
+  color: #0d0d0d;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 5px;
+  width: 85%;
+  border: 2px solid #f6f6f6;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
+input[type=text]:focus {
+  background-color: #fff;
+  border-bottom: 2px solid #5fbae9;
+}
+
+input[type=text]:placeholder {
+  color: #cccccc;
+}
+
+
+
+/* ANIMATIONS */
+
+/* Simple CSS3 Fade-in-down Animation */
+.fadeInDown {
+  -webkit-animation-name: fadeInDown;
+  animation-name: fadeInDown;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+/* Simple CSS3 Fade-in Animation */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.fadeIn {
+  opacity:0;
+  -webkit-animation:fadeIn ease-in 1;
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+
+  -webkit-animation-fill-mode:forwards;
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:1s;
+  -moz-animation-duration:1s;
+  animation-duration:1s;
+}
+
+.fadeIn.first {
+  -webkit-animation-delay: 0.4s;
+  -moz-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+}
+
+.fadeIn.second {
+  -webkit-animation-delay: 0.6s;
+  -moz-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+}
+
+.fadeIn.third {
+  -webkit-animation-delay: 0.8s;
+  -moz-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+}
+
+.fadeIn.fourth {
+  -webkit-animation-delay: 1s;
+  -moz-animation-delay: 1s;
+  animation-delay: 1s;
+}
+
+/* Simple CSS3 Fade-in Animation */
+.underlineHover:after {
+  display: block;
+  left: 0;
+  bottom: -10px;
+  width: 0;
+  height: 2px;
+  background-color: #56baed;
   content: "";
-  display: table;
-  clear: both;
+  transition: width 0.2s;
 }
 
-
-/* Responsive columns - one column layout (vertical) on small screens */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
+.underlineHover:hover {
+  color: #0d0d0d;
 }
 
-#loginSide{
-  position: relative;
-  width: 700px;
-  height: 800px;
+.underlineHover:hover:after{
+  width: 100%;
 }
 
 
 
+/* OTHERS */
 
-.usernameInput{
-background-color: darkgrey;
-position: relative;
-left: 270px;
-top: -140px;
-max-width: 200px;
-height: 40px;
-padding: 14px;
-/* text-align: center; */
-border: 2px solid white;
-border-radius: 5px;
-/* box-shadow: 3px 3px 2px rgb(249, 255, 85); */
+*:focus {
+    outline: none;
+} 
+
+#icon {
+  width:60%;
 }
 
-.usernameInput:focus {
-color: rgb(0, 255, 255);
-background-color: #212121;
-outline-color: rgb(0, 255, 255);
-box-shadow: -3px -3px 15px rgb(0, 255, 255);
-transition: .1s;
-transition-property: box-shadow;
+* {
+  box-sizing: border-box;
 }
-
-.passwordInput{
-background-color: #212121;
-position: relative;
-left: 100px;
-top: -40px;
-max-width: 200px;
-height: 40px;
-padding: 14px;
-/* text-align: center; */
-border: 2px solid white;
-border-radius: 5px;
-/* box-shadow: 3px 3px 2px rgb(249, 255, 85); */
-}
-
-.passwordInput:focus {
-color: rgb(0, 255, 255);
-background-color: #212121;
-outline-color: rgb(0, 255, 255);
-box-shadow: -3px -3px 15px rgb(0, 255, 255);
-transition: .1s;
-transition-property: box-shadow;
-}
-
-  
-.registerButton{
-padding: 0.8em 1.8em;
-border: 2px solid #17C3B2;
-border-radius: 17px;
-position: relative;
-left: -65px;
-top: 120px;
-width: 90px;
-overflow: hidden;
-background-color: transparent;
-text-align: center;
-text-transform: uppercase;
-font-size: 16px;
-transition: .3s;
-z-index: 1;
-font-family: inherit;
-color: #17C3B2;
-width: 160px
-}
-
-.registerButton::before {
-content: '';
-width: 0;
-height: 300%;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%) rotate(45deg);
-background: #17C3B2;
-transition: .5s ease;
-display: block;
-z-index: -1;
-}
-
-.registerButton:hover::before {
-width: 105%;
-}
-
-.registerButton:hover {
-color: white;
-}
-
-#registerSmallBox{
-position: relative;
-height: 450px;
-width: 280px;
-top: -400px;
-left: 350px;
-border-top-style: hidden;
-border-right-style: hidden;
-border-left-style: hidden;
-border-bottom-style: hidden;
-}
-
-#registerText{
-color: black;
-position: relative;
-top: -20px;
-left: 70px;
-font-size: 20px;
-}
-
-
-.signInButton{
-padding: 0.8em 1.8em;
-border: 2px solid #17C3B2;
-border-radius: 17px;
-position: relative;
-left: 80px;
-top: -10px;
-width: 390px;
-overflow: hidden;
-background-color: transparent;
-text-align: center;
-text-transform: uppercase;
-font-size: 16px;
-transition: .3s;
-z-index: 1;
-font-family: inherit;
-color: #17C3B2;
-width: 160px
-
-}
-
-
-.signInButton::before {
-content: '';
-width: 0;
-height: 300%;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%) rotate(45deg);
-background: #17C3B2;
-transition: .5s ease;
-display: block;
-z-index: -1;
-}
-
-.signInButton:hover::before {
-width: 105%;
-}
-
-.signInButton:hover {
-color: white;
-}
-
-.signInSmallBox{
-position: relative;
-height: 450px;
-width: 280px;
-top: -400px;
-left: 350px;
-border-top-style: hidden;
-border-right-style: hidden;
-border-left-style: hidden;
-border-bottom-style: hidden;
-}
-
- 
-
-.loginLogo{
-width: 40;
-height: 30%;
-position: absolute;
-top: 5px;
-right: 20px;
-
-}
-
-.registerNowtext{
-width: 300px;
-height: 100px;
-left: 250px;
-top: -100px;
-position: relative;
-font-size: 45px;
-}
-
-.passwordForget {
-  color: black;
-position: relative;
-top: 20px;
-left: 220px;
-font-size: 18px;
-}
-
-.emailAddress {
-    position: relative;
-      top: -10px;
-      left:300px;
-      text-align: center;
-      color: black;
-      font-size: 20px;
-  }
-  
-
-  .emailInput{
-    background-color: darkgrey;
-    position: relative;
-    left: -120px;
-    top: 55px;
-    max-width: 200px;
-    height: 40px;
-    padding: 14px;
-    /* text-align: center; */
-    border: 2px solid white;
-    border-radius: 5px;
-    /* box-shadow: 3px 3px 2px rgb(249, 255, 85); */
-    }
-    
-    .emailInput:focus {
-    color: rgb(0, 255, 255);
-    background-color: #212121;
-    outline-color: rgb(0, 255, 255);
-    box-shadow: -3px -3px 15px rgb(0, 255, 255);
-    transition: .1s;
-    transition-property: box-shadow;
-    }
-
-    .emailButton{
-      padding: 0.8em 1.8em;
-      border: 2px solid #17C3B2;
-      border-radius: 17px;
-      position: relative;
-      left: -85px;
-      top: 180px;
-      width: 90px;
-      overflow: hidden;
-      background-color: transparent;
-      text-align: center;
-      text-transform: uppercase;
-      font-size: 16px;
-      transition: .3s;
-      z-index: 1;
-      font-family: inherit;
-      color: #17C3B2;
-      width: 160px
-      }
-      
-      .emailButton::before {
-      content: '';
-      width: 0;
-      height: 300%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) rotate(45deg);
-      background: #17C3B2;
-      transition: .5s ease;
-      display: block;
-      z-index: -1;
-      }
-      
-      .emailButton:hover::before {
-      width: 105%;
-      }
-      
-      .emailButton:hover {
-      color: white;
-      }
-      
-      #emailSmallBox{
-      position: relative;
-      height: 450px;
-      width: 280px;
-      top: -400px;
-      left: 350px;
-      border-top-style: hidden;
-      border-right-style: hidden;
-      border-left-style: hidden;
-      border-bottom-style: hidden;
-      }
