--- a/app/src/components/ErrorImages/errorImages.css
+++ b/app/src/components/ErrorImages/errorImages.css
@@ -1,7 +1,7 @@
 .slideShowContainer {
     position: relative;
     left: 37%;
-    top: 150px;
+    top: 20%;
     width: 500px;
     height: 400px;
     overflow: hidden;
@@ -14,5 +14,5 @@
   h3{
     position: relative;
     left: 48.5%;
-    top: 10px;
+    top: -100px;
   }
