--- a/app/src/pages/lift/session.css
+++ b/app/src/pages/lift/session.css
@@ -10,9 +10,8 @@
     left: 150px;
     width: 190px;
     height: 254px;
-    background: rgb(46, 44, 44);
+    background: white;
     transition: all 300ms;
-    color: white;
 }
 
 #repsCard:hover{
@@ -26,9 +25,8 @@
     left: 350px;
     width: 190px;
     height: 254px;
-    background: rgb(46, 44, 44);
+    background: white;
     transition: all 300ms;
-    color: white;
 }
 
 #setsCard:hover{
@@ -41,9 +39,8 @@
     left: 550px;
     width: 190px;
     height: 254px;
-    background: rgb(46, 44, 44);
+    background: white;
     transition: all 300ms;
-    color: white;
 }
 
 #errorsNumCard:hover{
@@ -56,9 +53,8 @@
     left: 750px;
     width: 190px;
     height: 254px;
-    background: rgb(46, 44, 44);
+    background: white;
     transition: all 300ms;
-    color: white;
 }
 
 #totalWeightCard:hover{
@@ -71,9 +67,8 @@
     left: 950px;
     height: 254px;
     width: 190px;
-    background: rgb(46, 44, 44);
+    background: white;
     transition: all 300ms;
-    color: white;
 }
 
 #timeCard:hover{
@@ -86,9 +81,8 @@
     left: 1150px;
     height: 254px;
     width: 190px;
-    background: rgb(46, 44, 44);
+    background: white;
     transition: all 300ms;
-    color: white;
 }
 
 #worstSetCard:hover{
@@ -101,9 +95,8 @@
     left: 1350px;
     height: 254px;
     width: 190px;
-    background: rgb(46, 44, 44);
+    background: white;
     transition: all 300ms;
-    color: white;
 }
 
 #bestSetCard:hover{
@@ -116,9 +109,8 @@
     left: 1550px;
     height: 254px;
     width: 190px;
-    background: rgb(46, 44, 44);
+    background: white;
     transition: all 300ms;
-    color: white;
 }
 
 #bestRepCard:hover{
@@ -139,9 +131,12 @@
     margin-top: 10px;
 }
 
-.nums
+#nums
 {
-    font-size: 50px;
+    font-size: 45px;
     font-weight: bold;
     margin-top: 50px;
+    display: flex;
+    position: relative;
+    left: 35%;
 }
