--- a/app/src/components/ErrorImages/errorImages.css
+++ b/app/src/components/ErrorImages/errorImages.css
@@ -1,18 +1,21 @@
 .slideShowContainer {
-    position: relative;
-    left: 37%;
-    top: 20%;
-    width: 500px;
-    height: 400px;
-    overflow: hidden;
-  }
-  
-  img {
-    width: 100%;
-    height: auto;
-  }
-  h3{
-    position: relative;
-    left: 48.5%;
-    top: -100px;
-  }
+  width: 500px;
+  height: 400px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+.errorImageContainer {
+  margin-top: 30px;
+}
+
+.errorTitle {
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+}
