--- a/app/src/pages/tutorials/graph-tut.css
+++ b/app/src/pages/tutorials/graph-tut.css
@@ -39,7 +39,7 @@
   
   .squat-video-container iframe {
     width: 100%;
-    height: 100%;
+    height: 500px;
   }
   
   .squat-text-container {
