Fix: Slideshow showing better and images enlarge.

--- a/app/src/pages/homepage.css
+++ b/app/src/pages/homepage.css
@@ -40,9 +40,10 @@ h2 {
 .quick-session {
   position: relative;
   background-color: #1465c2;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
   padding: 1.5rem;
   border-radius: 0.5rem;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1), 0 4px 4px rgba(0, 0, 0, 0.1);
   transition: 0.3s;
   font-size: 1rem;
   font-weight: 600;
@@ -60,8 +61,13 @@ h2 {
 .quick-session:hover {
   background-color: rgb(3, 38, 150);
   color: white;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2), 0 8px 8px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
+}
+
+.quick-session:active {
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transform: translateY(2px);
 }
 
 
