--- a/app/src/pages/lift/session.css
+++ b/app/src/pages/lift/session.css
@@ -68,3 +68,35 @@
   margin-top: 5px;
   font-weight: bold;
 }
+
+
+.slideshow {
+  position: relative;
+}
+
+.prev-button,
+.next-button {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color: rgba(0,  0, 0, 0.2);
+}
+
+.next-button {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev-button:hover,
+.next-button:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
