--- a/app/src/pages/lift/session.css
+++ b/app/src/pages/lift/session.css
@@ -58,7 +58,7 @@
   background-color: white;
   padding: 20px;
   border-radius: 5px;
-  max-width: 100%; /* Increased from 90% to 80% */
+  max-width: 700px !important; /* Increased from 90% to 80% */
   max-height: 100%; /* Increased from 90% to 80% */
   overflow: auto;
 }
